R: added functions to filter reads.

--- a/splicing/NAMESPACE
+++ b/splicing/NAMESPACE
@@ -9,7 +9,7 @@ export(createGene, mergeGenes, rpk, realPsi,
        simulateReads)
 
 export(readSAM, noReads, isPaired, isMixed, noPairs, noSingles, toTable,
-       writeSAM, readLength, seqNames)
+       writeSAM, readLength, seqNames, selectReads, filterReads, FILTER)
 
 S3method("noReads", "splicingSAM")
 S3method("isPaired", "splicingSAM")
@@ -21,6 +21,8 @@ S3method("writeSAM", "splicingSAM")
 S3method("print", "splicingSAM")
 S3method("readLength", "splicingSAM")
 S3method("seqNames", "splicingSAM")
+S3method("selectReads", "splicingSAM")
+S3method("filterReads", "splicingSAM")
 
 export(plotIso, plotIsoSize, plotIsoPDF)
 
