R: removed -O3 compile flag, not portable.

--- a/splicing/src/Makevars.in
+++ b/splicing/src/Makevars.in
@@ -1,6 +1,6 @@
 SAMTOOLS=-D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -D_USE_KNETFILE -D_CURSES_LIB=1 -I. -Ibcftools
 
-PKG_CFLAGS=-DUSING_R -O3 -DHAVE_CONFIG_H $(SAMTOOLS) -DEXTERNAL_LAPACK
+PKG_CFLAGS=-DUSING_R -DHAVE_CONFIG_H $(SAMTOOLS) -DEXTERNAL_LAPACK
 PKG_LIBS= -lpthread -lm -lcurses -lz $(FLIBS) $(LAPACK_LIBS) $(BLAS_LIBS)
 
 all: $(SHLIB)
