R: support batch runs for the linear solver.

--- a/splicing/NAMESPACE
+++ b/splicing/NAMESPACE
@@ -56,4 +56,4 @@ S3method("runData", "MISOresult")
 
 export(geneComplexity, assignmentMatrix)
 
-export(matchIso, solveIso)
+export(matchIso, solveIso, runLinear)
