--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,5 @@ include pysplicing/src/f2c/*
 include pysplicing/src/lapack/*
 include misopy/settings/*
 include misopy/sashimi_plot/settings/*
+include misopy/gff-events/*
+include misopy/test-data/*
