Added R/C fragment length estimation, with BAM file.

--- a/splicing/NAMESPACE
+++ b/splicing/NAMESPACE
@@ -29,7 +29,7 @@ export(readSAM, noReads, isPaired, isMixed, noPairs, noSingles, toTable,
        writeSAM, getReadLength, seqNames, selectReads, filterReads, FILTER,
        getStrand, getAttributes, listAttributes, getAttribute, getIsoform,
        sortBAMFile, SAMFile2BAMFile, indexBAMFile, mergeReads,
-       eachSeqName)
+       eachSeqName, estimateFragLength)
 
 S3method("noReads", "splicingSAM")
 S3method("isPaired", "splicingSAM")
