R: added a function to select a subset of isoforms in a gene.

--- a/splicing/NAMESPACE
+++ b/splicing/NAMESPACE
@@ -3,7 +3,7 @@ export(listEnsemblGenes, getEnsemblGenes, readGFF3, writeGFF3)
 
 export(isGFF3, noGenes, seqIds, geneIds, selectGenes, noIso, geneTypes,
        noExons, getIso, geneLength, isoLength, totalExonLength, getSpecies,
-       constitutiveExons)
+       constitutiveExons, selectIso)
 
 S3method("noGenes", "gff3")
 S3method("seqIds", "gff3")
@@ -20,6 +20,7 @@ S3method("print", "gff3")
 S3method("getSpecies", "gff3")
 S3method("merge", "gff3")
 S3method("constitutiveExons", "gff3")
+S3method("selectIso", "gff3")
 
 S3method("print", "splicingExonset")
 
