Adding test-data to sashimi plot for nix releases

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,6 @@ include pysplicing/src/f2c/*
 include pysplicing/src/lapack/*
 include misopy/settings/*
 include misopy/sashimi_plot/settings/*
+include misopy/sashimi_plot/test-data/*
 include misopy/gff-events/*
 include misopy/test-data/*
