Dynamically finding best y axis value for sashimi plot to make samples comparable. Fixed some distutils issues. Gearing for misopy-0.4.1

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,5 +4,14 @@ include pysplicing/src/lapack/*
 include misopy/settings/*
 include misopy/sashimi_plot/settings/*
 include misopy/sashimi_plot/test-data/*
-include misopy/gff-events/*
-include misopy/test-data/*
+include misopy/sashimi_plot/test-data/bam-data/*
+include misopy/sashimi_plot/test-data/miso-data/*
+include misopy/sashimi_plot/test-data/miso-data/heartKOa/chr17/*
+include misopy/sashimi_plot/test-data/miso-data/heartKOb/chr17/*
+include misopy/sashimi_plot/test-data/miso-data/heartWT1/chr17/*
+include misopy/sashimi_plot/test-data/miso-data/heartWT2/chr17/*
+include misopy/gff-events/mm9/*
+include misopy/gff-events/mm9/genes/*
+include misopy/gff-events/hg18/*
+include misopy/test-data/sam-data/*
+include misopy/test-data/se-counts/*
