--- a/splicing/NAMESPACE
+++ b/splicing/NAMESPACE
@@ -3,7 +3,7 @@ export(listEnsemblGenes, getEnsemblGenes, readGFF3, writeGFF3)
 
 export(isGFF3, noGenes, seqIds, geneIds, selectGenes, noIso, geneTypes,
        noExons, getIso, geneLength, isoLength, totalExonLength, getSpecies,
-       constitutiveExons, selectIso, getExonSig)
+       constitutiveExons, selectIso, getExonSig, getRegion)
 
 S3method("noGenes", "gff3")
 S3method("seqIds", "gff3")
@@ -22,6 +22,7 @@ S3method("merge", "gff3")
 S3method("constitutiveExons", "gff3")
 S3method("selectIso", "gff3")
 S3method("getExonSig", "gff3")
+S3method("getRegion", "gff3")
 
 S3method("print", "splicingExonset")
 
