R: added first implementation of linear fragment bias.

--- a/splicing/NAMESPACE
+++ b/splicing/NAMESPACE
@@ -66,4 +66,4 @@ S3method("confint", "MISOresult")
 
 export(geneComplexity, assignmentMatrix)
 
-export(matchIso, solveIso, runLinear, writeLinear)
+export(matchIso, solveIso, runLinear, writeLinear, solveIsoLinBias)
