R: export getExonStart and getExonEnd functions.

--- a/splicing/NAMESPACE
+++ b/splicing/NAMESPACE
@@ -3,7 +3,8 @@ export(listEnsemblGenes, getEnsemblGenes, readGFF3, writeGFF3)
 
 export(isGFF3, noGenes, seqIds, geneIds, selectGenes, noIso, geneTypes,
        noExons, getIso, geneLength, isoLength, totalExonLength, getSpecies,
-       constitutiveExons, selectIso, getExonSig, getRegion)
+       constitutiveExons, selectIso, getExonSig, getRegion,
+       getExonStart, getExonEnd)
 
 S3method("noGenes", "gff3")
 S3method("seqIds", "gff3")
