--- a/splicing/NAMESPACE
+++ b/splicing/NAMESPACE
@@ -33,7 +33,7 @@ export(readSAM, noReads, isPaired, isMixed, noPairs, noSingles, toTable,
        writeSAM, getReadLength, seqNames, selectReads, filterReads, FILTER,
        getStrand, getAttributes, listAttributes, getAttribute, getIsoform,
        sortBAMFile, SAMFile2BAMFile, indexBAMFile, mergeReads,
-       eachSeqName, estimateFragLength)
+       eachSeqName, estimateFragLength, isReads)
 
 S3method("noReads", "splicingSAM")
 S3method("isPaired", "splicingSAM")
