proper MANIFEST.in file

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,10 +10,9 @@ include misopy/sashimi_plot/test-data/miso-data/heartKOa/chr17/*
 include misopy/sashimi_plot/test-data/miso-data/heartKOb/chr17/*
 include misopy/sashimi_plot/test-data/miso-data/heartWT1/chr17/*
 include misopy/sashimi_plot/test-data/miso-data/heartWT2/chr17/*
-include misopy/gff-events/mm9/*
-include misopy/gff-events/mm9/genes/*
-include misopy/test-data/sam-data/*
-include misopy/test-data/se-counts/*
+recursive-include misopy/test-data/gff-events/mm9/genes *.gff
+recursive-include misopy/test-data/sam-data *.sam
+recursive-include misopy/test-data/bam-data *.bam *.bam.bai
+recursive-include misopy/test-data/examples *.bam *.bai *.gff
 include misopy/pyx/*.pyx
 include misopy/pyx/*.c
-include misopy/pyx/*.h
