--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -13,6 +13,6 @@ include misopy/sashimi_plot/test-data/miso-data/heartWT2/chr17/*
 recursive-include misopy/test-data/gff-events/mm9/genes *.gff
 recursive-include misopy/test-data/sam-data *.sam
 recursive-include misopy/test-data/bam-data *.bam *.bam.bai
-recursive-include misopy/test-data/examples *.bam *.bai *.gff
+recursive-include misopy/test-data/examples *.bam *.bai *.gff *.txt
 include misopy/pyx/*.pyx
 include misopy/pyx/*.c
