--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,9 @@ python:
 
 before_install:
   - sudo apt-get install -qq python-numpy python-scipy
+  - pip install pysam
 
 virtualenv:
   system_site_packages: true
 
-install:
-  - pip install pysam
-  - sudo python setup.py install
-
-script: nosetests tests
+script: python setup.py nosetests
