--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "2.6"
   - "2.7"
 before_install:
+  - sudo apt-get install liblapack-dev gfortran libblas-dev
   - sudo apt-get install samtools
 install:
   - pip install .
