--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ before_install:
   - sudo apt-get install liblapack-dev gfortran libblas-dev
   - sudo apt-get install samtools
 install:
+  - travis_wait pip install scipy
+  - travis_wait pip install pysam
   - pip install .
 script:
   - python -m unittest discover misopy
