--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 splicing_0.1.tar.gz
 pysplicing-0.1.tar.gz
 /tags
+/output
+/tests/output
+/pysplicing/pysplicing/pysplicing.so
+/misopy.egg-info
+/build
